# Programowanie-Imperatywne

./: .gitignore  CMakeLists.txt  README.md
P_10_uogolnione_wektory/: CMakeLists.txt  main.c
P_11_listy_jednokierunkowe/: CMakeLists.txt  Tekst_1.txt  main.c
P_12_listy_dwukierunkowe/: CMakeLists.txt
P_13_hash_mapa/: CMakeLists.txt  main.c  test1
P_13_hashtable/: CMakeLists.txt  main.c  test3
P_1_proste_wektory/: CMakeLists.txt  main.c
P_2_1_losowanie_sortowanie/: CMakeLists.txt  main.c
P_2_2_stos_kolejka/: CMakeLists.txt  main.c
P_2_3_gra_w_wojne/: CMakeLists.txt  helper.c  main.c
P_3_statystyka/: CMakeLists.txt  main.c
P_4_1_stringi/: CMakeLists.txt  test  test4  test5
P_4_2_identyfikatory/: CMakeLists.txt  main.c  test  test2  test3
P_5_1_macierze_1/: CMakeLists.txt  test2  test2b  test3
P_5_2_macierze_2/: CMakeLists.txt  main.c  test1  test2  test3
P_6_relacje/: CMakeLists.txt  main.c  test2  test3
P_7_calki/: CMakeLists.txt  main.c
P_8_sortowania/: CMakeLists.txt  foods0.txt  foods10.txt
P_9_tablice_2d/: CMakeLists.txt  main.c  test4
calki/: CMakeLists.txt  main.c
docs/: index.html
gra_w_wojne/: CMakeLists.txt  helper.h  test.txt  test1.txt
kolokwium_2022_zadanie1/: CMakeLists.txt  main.c
kolokwium_2022_zadanie2/: CMakeLists.txt  main.c
kolokwium_2022_zadanie3/: CMakeLists.txt  main.c
kolokwium_2023_zadanie1/: CMakeLists.txt  main.c
kolokwium_2023_zadanie2/: CMakeLists.txt  main.c
kolokwium_2023_zadanie3/: CMakeLists.txt  main.c
kolokwium_2_2022_zadanie1/: CMakeLists.txt  main.c
kolokwium_2_2023_zadanie1/: CMakeLists.txt  main.c
kolokwium_2_2023_zadanie2/: CMakeLists.txt  main.c
listy_dwukierunkowe/: CMakeLists.txt  main.c
listy_jednokierunkowe/: CMakeLists.txt  Tekst_C.txt  main.c
pi_identyfikatory/: CMakeLists.txt  test1  test4
pi_mat1/: CMakeLists.txt  main.c  test3b
pi_mat2/: CMakeLists.txt  main.c
pi_stringi/: CMakeLists.txt  main.c  test1  test2
relacje/: CMakeLists.txt  test1  test1.1  test2.1
sortowania/: CMakeLists.txt  foods.txt  foods0.txt  main.c
tablice_2d/: CMakeLists.txt  main.c  test2  test3  test5
uogolnione_wektory/: CMakeLists.txt
