cmake_minimum_required(VERSION 3.24)
project(pi C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(gra_w_wojne)
add_subdirectory(pi_identyfikatory)
add_subdirectory(pi_stringi)
add_subdirectory(pi_mat1)
add_subdirectory(pi_mat2)
add_subdirectory(relacje)
add_subdirectory(calki)
add_subdirectory(sortowania)
add_subdirectory(tablice_2d)
add_subdirectory(uogolnione_wektory)