cmake_minimum_required(VERSION 3.24)
project(pi C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(P_1_proste_wektory)
add_subdirectory(P_2_1_losowanie_sortowanie)
add_subdirectory(P_2_2_stos_kolejka)
add_subdirectory(P_2_3_gra_w_wojne)
add_subdirectory(P_3_statystyka)
add_subdirectory(P_4_2_identyfikatory)
add_subdirectory(P_4_1_stringi)
add_subdirectory(P_5_1_macierze_1)
add_subdirectory(P_5_2_macierze_2)
add_subdirectory(P_6_relacje)
add_subdirectory(P_7_calki)
add_subdirectory(P_8_sortowania)
add_subdirectory(P_9_tablice_2d)
add_subdirectory(P_10_uogolnione_wektory)
add_subdirectory(P_11_listy_jednokierunkowe)
add_subdirectory(P_12_listy_dwukierunkowe)
add_subdirectory(P_13_hashtable)
add_subdirectory(kolokwium_2022_zadanie1)
add_subdirectory(kolokwium_2022_zadanie2)
add_subdirectory(kolokwium_2022_zadanie3)
add_subdirectory(kolokwium_2_2022_zadanie1)
add_subdirectory(kolokwium_2_2023_zadanie1)
add_subdirectory(kolokwium_2_2023_zadanie2)
add_subdirectory(kolokwium_2023_zadanie1)
add_subdirectory(kolokwium_2023_zadanie2) 
 
